# vietnamese-receipt-ocr-pipeline

./: .gitignore  eda.ipynb  pyproject.toml
configs/data/: mcocr_train_val.yaml
configs/experiments/: baseline_v1.yaml
configs/gpu_profiles/: l4_24gb.yaml  p100_16gb.yaml  t4_16gb.yaml  t4x2_32gb.yaml
configs/lora/: r16_attn_mlp.yaml  r32_attn_mlp.yaml  r8_attn_only.yaml
configs/model/: qwen2_vl_2b.yaml  qwen3_vl_2b.yaml
docs/superpowers/plans/: 2026-05-06-eda-pipeline.md  2026-05-06-vn-receipt-ocr-training-pipeline.md
docs/superpowers/specs/: 2026-05-06-eda-pipeline-decision.md  2026-05-06-eda-pipeline-design.md  2026-05-06-vn-receipt-ocr-training-pipeline-decision.md  2026-05-06-vn-receipt-ocr-training-pipeline-design.md
notebooks/: README.md  kaggle_train.ipynb
scripts/: smoke_test.sh
src/vn_receipt_ocr/: __init__.py  __main__.py  cli.py
src/vn_receipt_ocr/config/: loader.py  models.py  validation.py
src/vn_receipt_ocr/data/: collator.py  dataset.py  image_io.py  prompt.py
src/vn_receipt_ocr/eval/: aggregate.py  batch_predict.py  cer.py  diacritic_cer.py  edit_ops.py  latency.py  length_ratio.py  normalized_cer.py  wer.py
src/vn_receipt_ocr/kaggle/: gpu_detect.py  paths.py  secrets.py
src/vn_receipt_ocr/model/: loader.py
src/vn_receipt_ocr/train/: callbacks.py  manifest.py  trainer.py
tests/: conftest.py  test_cli.py
tests/config/: test_loader.py  test_models.py  test_validation.py
tests/data/: test_collator.py  test_dataset.py  test_prompt.py
tests/eval/: test_aggregate.py  test_cer.py  test_diacritic_cer.py  test_edit_ops.py  test_latency.py  test_length_ratio.py  test_normalized_cer.py  test_wer.py
tests/kaggle/: test_gpu_detect.py  test_paths.py  test_secrets.py
tests/model/: test_loader.py
tests/train/: test_callbacks.py  test_manifest.py  test_trainer.py
