[project]
name = "vietnamese-receipt-ocr"
version = "0.1.0"
description = "Vietnamese receipt EDA pipeline (Phase 0): generates machine-readable configuration artifacts from MC-OCR 2021 and 5CD-AI/Viet-Receipt-VQA"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "huggingface-hub>=1.13.0",
    "ipykernel>=7.2.0",
    "jiwer>=4.0.0",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "peft>=0.19.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "transformers>=5.8.0",
    "trl>=1.3.0",
    "wandb>=0.26.1",
]

[project.optional-dependencies]
gpu = ["unsloth"]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vn_receipt_ocr"]

[project.scripts]
vn-receipt-ocr = "vn_receipt_ocr.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers"
